--- a/update_config.json
+++ b/update_config.json
@@ -1,5 +1,5 @@
 {
-  "channel": "stable",
+  "channel": "unstable",
   "version": "2.2.5",
   "repo": "https://github.com/Hutlaw/remote-browser-stable",
   "branch": "main",
